Fixed contact button to align center have margin forcing on the left and right side to keep the button center while allowing it to expand.

--- a/Aessets/css/style.css
+++ b/Aessets/css/style.css
@@ -157,14 +157,14 @@ font-size: var(--h1-font-size)
 
 /*==================== LAYOUT ====================*/
 .container{
-    max-width: 100%;
+    max-width: 2000px;
     margin-left: var(--mb-1-5);
     margin-right: var(--mb-1-5);
 }
 
 .grid{
     display: grid;
-    gap: 1.5rem;
+    gap: 2.5rem;
 }
 
 .header{
@@ -202,7 +202,7 @@ font-size: var(--h1-font-size)
 color: var(--first-color);
 }
 
-@media screen and (max-width: 3000px){
+@media screen and (max-width:2000px){
     .nav__menu{
         position: fixed;
         bottom: -100%;
@@ -219,7 +219,7 @@ color: var(--first-color);
 }
 .nav__list{
 grid-template-columns: repeat(3, 1fr);
-gap: 15.rem;
+gap: 1.5rem;
 
 }
 
@@ -288,6 +288,7 @@ bottom: 0;
 .home__social-icon{
     font-size: 1.25rem;
     color: var(--first-color);
+    
 }
 
 .home__social-icon:hover{
@@ -295,12 +296,17 @@ bottom: 0;
 }
 
 .home__blob{
-    width: 200px;
+    width: 50%;
     fill: var(--first-color);
+    padding: 0;
+    align-content: center;
+    margin-left: 15%;
+
 }
 
 .home__blob-img{
     width: 200px;
+    align-content: center;
 }
 
 .home__data{
@@ -309,6 +315,7 @@ bottom: 0;
 
 .home__title{
     font-size: var(--big-font-size);
+    text-align: center;
 }
 
 .home__subtitle{
@@ -316,19 +323,21 @@ bottom: 0;
     color: var(--text-color);
     font-weight:var(--font-medium) ;
     margin-bottom: var(--mb-0-75);
+    text-align: center;
 }
 .home__description{
     margin-bottom: var(--mb-2);
+    text-align: center;
 }
 
 
 .home__scroll-button{
     color: var(--first-color);
-    transition: .3s;
+    transition: .4s;
 }
 
 .home__scroll-button:hover{
-    transform: translateY(.25rem);
+    transform: translateY(.35rem);
 }
 
 .home__scroll-mouse{
@@ -373,6 +382,14 @@ bottom: 0;
 .button--white:hover{
     background-color: #ffffffee;
 }
+.contactbtn{
+    justify-content: center;
+    display: flex;
+    align-items: center;
+    align-self: center;
+    margin-left: 30%;
+    margin-right: 30%;
+}
 
 .button--flex{
     display: inline-flex;
@@ -404,12 +421,13 @@ bottom: 0;
 .about__description{
     text-align: center;
     margin-bottom: var(--mb-2-5);
-    
+    justify-content: space-around;
 }
 
 .about__info{
     display: flex;
     justify-content: space-evenly;
+    text-align: justify;
     margin-bottom: var(--mb-2-5);
     
 }
@@ -734,8 +752,8 @@ transform: translateX(.25rem);
 }
 
 .portfolio__img{
-    width: 40%;
-    border-radius: .5rem;
+    width: 200px;
+    border-radius: .8rem;
     justify-self: center;
     align-self: center;
     
@@ -744,14 +762,20 @@ transform: translateX(.25rem);
 .portfolio__title{
     font-size: var(--h3-font-size);
     margin-bottom: var(--mb-0-5);
+    align-self: center;
+    text-align: center;
 }
 
 .portfolio__description{
     margin-bottom: var(--mb-0-75);
+    align-content: center;
+    text-align: center;
+    justify-content: space-evenly;
+
 }
 
 .portfolio__button:hover .button__icon{
-    transform: translateX(.25rem);
+    transform: translateX(.35rem);
 }
 
 
@@ -965,7 +989,7 @@ transform: translateX(.25rem);
 
 /*small devices*/
 
-@media screen and (max-width:350px){
+@media screen and (max-width:400px){
     .container{
         margin-left: var(--mb-1);
         margin-right: var(--mb-1);
@@ -994,6 +1018,10 @@ transform: translateX(.25rem);
     gap: .5rem;
 }
 
+.services__container{
+    grid-template-columns: max-content;
+    justify-content: center;
+}
 
 }
 
